--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,17 +11,18 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: futureware-tech/simulator-action@v3
+        with:
+          model: 'iPhone 14'
+
       - uses: subosito/flutter-action@v2
         with:
-          channel: stable
+          channel: 'stable'
       - name: Install dependencies
         run: flutter pub get
       - name: Run tests on iOS Simulator
         run: |
           flutter test
-          flutter build ios --no-codesign
-          xcrun simctl create TestDevice com.apple.CoreSimulator.SimDeviceType.iPhone-14 com.apple.CoreSimulator.SimRuntime.iOS-16-2
-          xcrun simctl boot TestDevice
-          flutter drive --target=integration-test/app_test.dart -d TestDevice
+          flutter test integration_test
         env:
           CI: true
